--- a/src/content/posts/lag-switch-postmortem.mdx
+++ b/src/content/posts/lag-switch-postmortem.mdx
@@ -16,8 +16,8 @@ draft: false
 coverSlot: "secondary"
 coverPriority: 8
 ---
-import PullQuote from "../../components/PullQuote.astro";
-import CaptionedFigure from "../../components/CaptionedFigure.astro";
+import PullQuote from "../../components/mdx/PullQuote.astro";
+import CaptionedFigure from "../../components/mdx/CaptionedFigure.astro";
 
 The pager screamed "DDoS" but the network looked clean. Throughput flat, CPU calm. The only spike was in retries across a narrow slice of tenants.
 
