--- a/src/content/posts/livewire-probe.mdx
+++ b/src/content/posts/livewire-probe.mdx
@@ -15,7 +15,7 @@ draft: false
 coverSlot: "secondary"
 coverPriority: 4
 ---
-import Sidebar from "../../components/Sidebar.astro";
+import Sidebar from "../../components/layout/Sidebar.astro";
 
 We carried too many UART logs on thumb drives. Livewire Probe lets us stream them through a side-band HTTP channel with a single flag.
 
