--- a/src/content/posts/night-runner.mdx
+++ b/src/content/posts/night-runner.mdx
@@ -16,8 +16,8 @@ draft: false
 coverSlot: "secondary"
 coverPriority: 7
 ---
-import PullQuote from "../../components/PullQuote.astro";
-import CaptionedFigure from "../../components/CaptionedFigure.astro";
+import PullQuote from "../../components/mdx/PullQuote.astro";
+import CaptionedFigure from "../../components/mdx/CaptionedFigure.astro";
 
 We needed radio line-of-sight to land a firmware update to a far cabin. The quickest tower was the ridge itself. We packed a pelican case with a low-power dev server, a folding mast, and instant ramen.
 
