--- a/src/content/posts/signal-hunt.mdx
+++ b/src/content/posts/signal-hunt.mdx
@@ -16,9 +16,9 @@ draft: false
 coverSlot: "lead"
 coverPriority: 10
 ---
-import PullQuote from "../../components/PullQuote.astro";
-import Sidebar from "../../components/Sidebar.astro";
-import CaptionedFigure from "../../components/CaptionedFigure.astro";
+import PullQuote from "../../components/mdx/PullQuote.astro";
+import Sidebar from "../../components/layout/Sidebar.astro";
+import CaptionedFigure from "../../components/mdx/CaptionedFigure.astro";
 
 The alert only fired when the ridge was wrapped in rainclouds. A narrowband radio hopped off frequency and pushed a malformed packet that poisoned the mesh.
 
