--- a/src/content/posts/signal-hunt.mdx
+++ b/src/content/posts/signal-hunt.mdx
@@ -45,7 +45,7 @@ import CollapsibleSection from "../../components/mdx/CollapsibleSection.astro";
 />
 
 <CaptionedFigure
-  src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=1200&q=80"
+  src="/images/GetTheTools.png"
   alt="Laptop and code"
 >
   The lab mindset is about isolation, repeatability, and good notes. Everything
